--- a/index.html
+++ b/index.html
@@ -192,7 +192,134 @@
           </div>
         </section>
 
+        <!-- card 2 section -->
+
+        <section class="py-8 lg:py28">
+          <div class="text-center mb-8">
+            <h1 class="text-3xl md:4xl font-bold mb-5">News & Events</h1>
+            <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+          </div>
+          <!-- card section -->
+           <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+              <!-- prodact reviwe -->
+               <div class="rounded-lg border-solid border-2 overflow-hidden">
+                <img class="p-2" src="images/news-1.png" alt="">
+                <div class="p-4">
+                  <p class="text-gray-600">Feb 05, 2027</p>
+                  <h2 class="font-bold text-xl pt-2">Collecting 8 points for discount</h2>
+                  <p class="text-gray-600 pt-2">There are many variations of passages of Lorem Ipsum available.</p>
+                  <button class="pt-2">Learn More</button>
+                </div>
+               </div>
+               <!-- prodact reviwe -->
+               <div class="rounded-lg border-solid border-2 overflow-hidden">
+                <img class="p-2" src="images/news-2.png" alt="">
+                <div class="p-4">
+                  <p class="text-gray-600">Feb 05, 2027</p>
+                  <h2 class="font-bold text-xl pt-2">Collecting 8 points for discount</h2>
+                  <p class="text-gray-600 pt-2">There are many variations of passages of Lorem Ipsum available.</p>
+                  <button class="pt-2">Learn More</button>
+                </div>
+               </div>
+               <!-- prodact reviwe -->
+               <div class="rounded-lg border-solid border-2 overflow-hidden">
+                <img class="p-2" src="images/news-3.png" alt="">
+                <div class="p-4">
+                  <p class="text-gray-600">Feb 05, 2027</p>
+                  <h2 class="font-bold text-xl pt-2">Collecting 8 points for discount</h2>
+                  <p class="text-gray-600 pt-2">There are many variations of passages of Lorem Ipsum available.</p>
+                  <button class="pt-2">Learn More</button>
+                </div>
+               </div>
+           </div>
+        </section>
      </main>
 
+     <!-- footer section -->
+
+    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+      <div class="w-9/12 mx-auto">
+        <!-- logo -->
+         <div class="mb-8 flex justify-between">
+          <img class="mb-8" src="images/cup.png" alt="">
+          <div class="flex items-center gap-2">
+            <h4>Ready To Get Start</h4>
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold">Get Started</button>
+          </div>
+         </div>
+
+         <!-- links -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+
+            <!-- first colum -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+              <ul class="space-y-2">
+                <li>
+                  <a class="hover:text-orange-600" href="#">Home</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">About Us</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">Insurance</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+                </li>
+              </ul>
+             </div>
+             <!-- secend colum -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Our Service</h3>
+              <ul class="space-y-2">
+                <li>
+                  <a class="hover:text-orange-600" href="#">Life Insurance</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">Car Insurance</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">Health Insurance</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">House Insurance</a>
+                </li>
+              </ul>
+             </div>
+             <!-- thart colum -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Help</h3>
+              <ul class="space-y-2">
+                <li>
+                  <a class="hover:text-orange-600" href="#">FAQs</a>
+                </li>
+                <li>
+                  <a class="hover:text-orange-600" href="#">Contact Us</a>
+                </li>
+              </ul>
+             </div>
+
+             <!-- forth coulam -->
+             <div>
+              <h3 class="font-semibold text-lg mb-3">Subscribe to our <br> newsletter</h3>
+              <div class="flex flex-col space-y-2">
+                <input class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6" placeholder="email adress" type="text">
+                <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 inline-flex rounded-full text-white justify-center items-center"></i>
+                <div class="flex justify-between w-2/5 mb-2 mt-8 gap-6">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-discord"></i>
+                </div>
+              </div>
+             </div> 
+          </div>
+           <div class="text-center pt-4 mt-4">
+            <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+           </div>
+      </div>
+    </footer>
 </body>
 </html>
